mdapi/Custom/objects/AM_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Market_Rent__c</fullName>
        <formula>Yardi_Rent_Roll__r.Market_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Market Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Value_PSF__c</fullName>
        <formula>Portfolio__r.Market_Value_PSF_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Market Value PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Value_UW__c</fullName>
        <formula>Portfolio__r.Market_Value_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Market Value @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Portfolio__r.Market__c)</formula>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_to_Month__c</fullName>
        <formula>Yardi_Rent_Roll__r.Month_to_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Month to Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <formula>Yardi_Rent_Roll__r.Move_In_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Actual__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Tip__r.Move_Out_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Most Recent TIP</inlineHelpText>
        <label>Move-Out Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <formula>Yardi_Rent_Roll__r.Move_Out_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Effective_Rent__c</fullName>
        <formula>Yardi_Rent_Roll__r.Net_Effective_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Net Effective Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Occupant_Type__c</fullName>
        <formula>TEXT( Portfolio__r.Residence__r.Most_Recent_Tip__r.Occupant_Type__c )</formula>
        <inlineHelpText>Most Recent TIP</inlineHelpText>
        <label>Occupant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupied_Status_Application__c</fullName>
        <formula>TEXT( Portfolio__r.Occupied_Status_Acquisition__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Occupied Status Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Sign_Off_Date__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c</formula>
        <inlineHelpText>Most Recent Rehab</inlineHelpText>
        <label>Office Sign-Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Closing_Costs_Est_UW__c</fullName>
        <formula>Portfolio__r.Other_Closing_Costs_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Other Closing Costs Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platform_Buildup_Allocation__c</fullName>
        <formula>Portfolio__r.Platform_Buildup_Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Platform Buildup Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pool__c</fullName>
        <formula>Portfolio__r.Pool__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Pool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Manager__c</fullName>
        <formula>Yardi_Rent_Roll__r.Portfolio_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Portfolio Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>AM Reportings</relationshipLabel>
        <relationshipName>AM_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Acq_Status__c</fullName>
        <formula>IF( ISPICKVAL( Portfolio__r.Acquisition_Status__c, &quot;For Sale&quot;),&quot;For Sale&quot;, 
IF( ISPICKVAL( Portfolio__r.Acquisition_Status__c, &quot;Cancelled&quot;),&quot;Cancelled&quot;, 
IF( ISPICKVAL( Portfolio__r.Acquisition_Status__c, &quot;Sold&quot;),&quot;Sold&quot;, 

IF(AND(Portfolio__r.Open_TIP__c  =  1, Portfolio__r.Open_Rehab__c  &gt;= 1), &quot;Instatus Transition&quot;,

IF( Portfolio__r.Open_TIP__c  =  1, &quot;TIP&quot;,
IF( Portfolio__r.Open_Rehab__c  = 1, &quot;Rehab&quot;,

IF(AND(Yardi_Rent_Roll__r.Unit_Rental_Type__c= &quot;Residential&quot;,Yardi_Rent_Roll__r.Current_Tenant_Status__c= &quot;Applicant&quot; ), &quot;Leased&quot;,  
IF(AND(Yardi_Rent_Roll__r.Unit_Rental_Type__c= &quot;Residential&quot;,Yardi_Rent_Roll__r.Current_Tenant_Status__c= &quot;Future&quot; ), &quot;Leased&quot;,

IF( Yardi_Rent_Roll__r.Current_Tenant_Status__c  = &quot;Current&quot;, &quot;Leased&quot;, 
IF( Yardi_Rent_Roll__r.Current_Tenant_Status__c  = &quot;Eviction&quot;, &quot;Leased&quot;, 
IF( Yardi_Rent_Roll__r.Current_Tenant_Status__c  = &quot;Notice&quot;, &quot;Leased&quot;,
IF( Yardi_Rent_Roll__r.Current_Tenant_Status__c  = &quot;VACANT&quot;, &quot;OTM&quot;, 
IF( Yardi_Rent_Roll__r.Unit_Rental_Type__c  = &quot;Admin&quot;, &quot;TIP&quot;,  
IF( Yardi_Rent_Roll__r.Unit_Rental_Type__c  = &quot;Down&quot;, &quot;Rehab&quot;, 

IF( BEGINS( TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c) , &quot;Closed&quot;),&quot;Leased&quot;, 

&quot;Not Segmented&quot;)))))))))))))))</formula>
        <inlineHelpText>Formula based on several stages from Most Recent TIP, Most Recent Rehab, Yardi Rent Roll and Acquisition Status</inlineHelpText>
        <label>Post Acq Stat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_High_Value_PSF__c</fullName>
        <formula>Portfolio__r.Previous_High_Value_PSF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Previous High Value PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_High_Value__c</fullName>
        <formula>Portfolio__r.Previous_High_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Previous High Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Portfolio__r.Property_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <formula>Portfolio__r.Property_Code__c</formula>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Property Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>Portfolio__r.Property_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <formula>Portfolio__r.Property_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Property Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ZipCode__c</fullName>
        <formula>Portfolio__r.Property_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Property ZipCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proxy_BK_Status__c</fullName>
        <formula>TEXT( Portfolio__r.Proxy_BK_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Proxy - BK Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Key_Date__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Rehab__r.Re_Key_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Re-Key Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Portfolio__r.Region__c)</formula>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Market2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rehab_Aging_Start_Date__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c</formula>
        <inlineHelpText>Portfolio__r.Residence__r.Most_Recent_Rehab__r.</inlineHelpText>
        <label>Rehab Aging Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rehab_Budget_Est_UW__c</fullName>
        <formula>Portfolio__r.Rehab_Budget_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Rehab Budget Est. @UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rehab_Overhead__c</fullName>
        <formula>Portfolio__r.Rehab_Overhead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Rehab Overhead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rehab_Stage__c</fullName>
        <description>For most recent rehab lookup - use Portfolio__r.Residence__r.Most_Recent_Rehab__r</description>
        <formula>TEXT(  Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c  )</formula>
        <inlineHelpText>Portfolio - Residence - Most Recent Rehab</inlineHelpText>
        <label>Rehab Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rehab_Status__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Status__c</formula>
        <inlineHelpText>Portfolio__r.Residence__r.Most_Recent_Rehab__r.</inlineHelpText>
        <label>Rehab Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_Admin_Fee__c</fullName>
        <formula>Yardi_Rent_Roll__r.Admin_Fee_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi_Rent_Roll__r</inlineHelpText>
        <label>Rent Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_Est_UW__c</fullName>
        <formula>Portfolio__r.Replacement_Cost_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Replacement Cost Est @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_PSF_UW_old__c</fullName>
        <formula>Portfolio__r.Replacement_Cost_PSF_UW_old__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Replacement Cost PSF @ UW (old)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <formula>Portfolio__r.Reporting_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residence_Latitude__c</fullName>
        <formula>Portfolio__r.Residence__r.Location__Latitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residence Latitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residence_Longitude__c</fullName>
        <formula>Portfolio__r.Residence__r.Location__Longitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residence Longitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_Rehab_Date__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Tip__r.Sent_to_Rehab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r.Residence__r.Most_Recent_Tip__r</inlineHelpText>
        <label>Sent to Rehab Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_to_TIP_Date__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Rehab__r.Sent_to_TIP__c</formula>
        <inlineHelpText>Portfolio__r.Residence__r.Most_Recent_Rehab__r</inlineHelpText>
        <label>Sent to TIP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Square_Feet__c</fullName>
        <formula>Portfolio__r.Square_Feet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Square Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIP_Closed_Date__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r.Residence__r.Most_Recent_Tip__r</inlineHelpText>
        <label>TIP Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIP_Status__c</fullName>
        <description>Portfolio__r.Residence__r.Most_Recent_Tip__r This is for everything that references &quot;Most Recent TIp&quot;</description>
        <formula>TEXT( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r.Residence__r.Most_Recent_Tip__r</inlineHelpText>
        <label>TIP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Policy_Cost_Est_UW__c</fullName>
        <formula>Portfolio__r.Title_Policy_Cost_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r</inlineHelpText>
        <label>Title Policy Cost Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(  Portfolio__r.Residence__r.Most_Recent_Rehab__r.Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r.Residence__r.Most_Recent_Rehab</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Rental_Type__c</fullName>
        <formula>Yardi_Rent_Roll__r.Unit_Rental_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi_Rent_Roll</inlineHelpText>
        <label>Unit Rental Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Status__c</fullName>
        <formula>Yardi_Rent_Roll__r.Unit_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi_Rent_Roll</inlineHelpText>
        <label>Unit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacancy_Reason__c</fullName>
        <formula>TEXT(  Portfolio__r.Residence__r.Most_Recent_Tip__r.Vacancy_Reason__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r.Residence__r.Most_Recent_Tip</inlineHelpText>
        <label>Vacancy Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Property_Code__c</fullName>
        <formula>Portfolio__r.Yardi_Property_Code__c</formula>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Yardi Property Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Rent_Roll__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Yardi Rent Roll</label>
        <referenceTo>Yardi_Rent_Roll__c</referenceTo>
        <relationshipLabel>AM Reportings</relationshipLabel>
        <relationshipName>AM_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <formula>Portfolio__r.Year_Built__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Year Built</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>all_in_cost_psf_est_uw__c</fullName>
        <formula>Portfolio__r.All_In_Cost_PSF_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>All-In Cost PSF Est. @ Underwriting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>AM Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reporting_Date__c</columns>
        <columns>Acquisition_Status__c</columns>
        <columns>Yardi_Rent_Roll__c</columns>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Property_Code__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LAT_LONG</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Property_Code__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Residence_Latitude__c</columns>
        <columns>Residence_Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Code__c</field>
            <operation>equals</operation>
            <value>AZPH2468</value>
        </filters>
        <filters>
            <field>Property_Code__c</field>
            <operation>equals</operation>
            <value>AZPH2206</value>
        </filters>
        <label>LAT/LONG</label>
        <sharedTo>
            <group>SF_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LAT_LONG_Mesa</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Property_Code__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Residence_Latitude__c</columns>
        <columns>Residence_Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_City__c</field>
            <operation>equals</operation>
            <value>Mesa</value>
        </filters>
        <label>LAT/LONG Mesa</label>
        <sharedTo>
            <group>SF_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LAT_LONG_QC</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Property_Code__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Residence_Latitude__c</columns>
        <columns>Residence_Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_City__c</field>
            <operation>equals</operation>
            <value>Queen Creek</value>
        </filters>
        <label>LAT/LONG QC</label>
        <sharedTo>
            <group>SF_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>One_Reporting_Date</fullName>
        <columns>NAME</columns>
        <columns>Reporting_Date__c</columns>
        <columns>Acquisition_Status__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Yardi_Rent_Roll__c</columns>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Property_Code__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Date__c</field>
            <operation>equals</operation>
            <value>8/19/2013</value>
        </filters>
        <label>One_Reporting_Date</label>
    </listViews>
    <nameField>
        <displayFormat>AM-{00000}</displayFormat>
        <label>AM Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Reportings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>